lab1/Test/L1-A-5-67.output
Error Type B at Line 5
Error Type A at Line 31
Error Type B at Line 32
Error Type A at Line 40
